# FlexiLogger

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
src/FlexiLogger/: __init__.py  gettraceback.py  logger.py
